now it works, but user cannot import keys or choose algorithm