@@ -1,2 +1,3 @@
 set VERSION=1.0-SNAPSHOT
-java -jar release/app-%VERSION%.jar
+java -Djava.security.manager -Djava.security.policy=source/assets/lab9.policy -jar release/app-%VERSION%.jar
+REM java -jar release/app-%VERSION%.jar
